# web-admin-template

./: README.md  next.config.mjs  package-lock.json  package.json
bundler/: Cargo.toml  index.d.ts  index.js  package.json
bundler/leptos-app/src/: main.rs
bundler/npm/linux-x64-gnu/: README.md  package.json
bundler/npm/linux-x64-musl/: README.md  package.json
bundler/src/: lib.rs
controld/: Cargo.toml  index.d.ts  index.js  package.json
controld/npm/freebsd-x64/: README.md  package.json
controld/npm/linux-x64-gnu/: README.md  package.json
controld/npm/linux-x64-musl/: README.md  package.json
controld/src/: lib.rs
leptos-app/: .justfile  Cargo.toml
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/signup/: page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(dashboard)/projects/: page.tsx
src/components/: BundlerExec.tsx  Header.tsx  MetricsChart.tsx  TotalRequestsChart.tsx
src/lib/db/: index.ts  schema.ts
src/lib/lucia/: adapter.ts  index.ts
src/lib/server/: actions.ts  bundle.ts
src/types/: index.ts
