workspace = { members = ["leptos-app"] }
[package]
edition = "2021"
name = "bundler"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
dagger-sdk = "0.9.8"
eyre = "0.6.12"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "async",
] }
napi-derive = "2.12.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
