[package]
edition = "2021"
name = "controld"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bollard = "0.16.1"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tar = "0.4.41"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
